Fix alignment issue.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -233,6 +233,7 @@ footer{
 			border:1px solid #fff;
 			margin:0;
 			.fb-like{
+				position:absolute;
 				top:50%;
 				left:50%;
 				-moz-transform:translateX(-50%) translateY(-50%);
